--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,26 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Changa:wght@400;500;600;700&family=Press+Start+2P&family=Roboto:wght@400;500;700&display=swap');
+
+html, body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+     background: #ffff;
+    /*background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%); */
+
 }
+
+  
+.container {
+  
+  width: 100%;
+  height: 100%;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
