--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+@media (min-width: 320px) and (max-width: 480px) {
+  p  {
+    font-size: 14px;
+  }
+}
