--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -84,6 +84,7 @@ color: #FFFFFF;
         .hero {
             background-size: contain;
             background-position: center;
+            padding-top: 10px;
         }
 
         .flex {
