--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -115,6 +115,8 @@ color: #FFFFFF;
 
 
 @media (min-width: 320px) and (max-width: 480px) {
+
+
             .menu, .clicks{
                 display: none;
             }
@@ -122,16 +124,45 @@ color: #FFFFFF;
             .hamburger{
                 display: block;
                 margin-right: 20px;
+
+                cursor: pointer;
+  -webkit-transition: all 1s 0s ease;
+  -moz-transition: all 1s 0s ease;
+  -o-transition: all 1s 0s ease;
+  transition: all 1s 0s ease;
             }
         
             .hamMenu {
                 display: block;
-                margin-top: 20px;
+                margin-top: 10px;
+                margin-bottom: 10px;
                 display: flex;
+                justify-content: center;
                 flex-direction: column;
                 background: #003751;
                 padding: 20px 30px;
+                /* height: 0%; */
+                width: 90%; 
+                position: fixed;
+                /* z-index: 1; */
+                top: 50px;
+                right: 0;
+                /* background-color: #111; */
+                overflow-x: hidden;
+                overflow-y: hidden;
+                transition: 6s;
+                animation: fadeInAnimation ease 0.7s;
+                animation-fill-mode: forwards;
             }
+
+            @keyframes fadeInAnimation {
+                0% {
+                    height: 0;
+                }
+                100% {
+                    height: 30%;
+                 }
+                }
         
             .hamMenu a{
                 text-decoration: none;
@@ -146,6 +177,7 @@ color: #FFFFFF;
                 display: flex;
                 gap: 20px;
                 margin-top: 10px;
+                justify-content: center;
             }
             
             header {
@@ -153,7 +185,7 @@ color: #FFFFFF;
                 display: flex;
                 flex-wrap: nowrap;
                 justify-content: space-between;
-                padding-top: 30px;
+                padding-top: 0px;
             }
         
             .logo {
