--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -59,10 +59,12 @@ color: rgba(0, 55, 81, 0.8);
         display: flex;
         flex-direction: column;
         justify-content: center;
+        place-content: center;
+        align-items: center;
         gap: 20px;
     }
 
     .member img {
-        margin-left: 60px;
+        margin-left: 0px;
     }
 }
