--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -41,10 +41,11 @@ color: #FFFFFF;
 }
 
 .body {
-    font-family: Montserrat;
+    font-family: 'Montserrat';
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
+line-height: 2rem;
 /* or 153% */
 margin: 10px 10px;
 text-align: justify;
