--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -59,6 +59,9 @@ color: #FFFFFF;
 .flex {
     display: flex;
     justify-content: center;
+    align-content: center;
+    place-content: center;
+    align-content: center;
     margin-top: 20px;
     gap: 200px;
 }
