--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -41,7 +41,7 @@ color: #FFFFFF;
 }
 
 .body {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
