--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -8,9 +8,10 @@
 }
 
 .hero h5 {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 12px;
+    font-family: 'Changa', sans-serif;
+    font-size: 14px;
     font-weight: 400;
+    letter-spacing: 2px;
     color: #ffff;
     text-align: left;
     line-height: 2rem;
@@ -72,11 +73,11 @@ color: #FFFFFF;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-   
 }
 
 .flex2 {
     margin-top: 90px;
+    flex-grow: 1;
 }
 
 
@@ -134,10 +135,11 @@ color: #FFFFFF;
 
     .flex2 {
         margin-top: 10px;
+        flex-grow: 1;
     }
 
     .hero h5 {
-    font-family: Press Start 2P;
+    font-family:'Changa', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
