--- a/src/components/Roadmap.css
+++ b/src/components/Roadmap.css
@@ -18,7 +18,7 @@
 }
 
 .roadBox h1 {
-font-family: 'Press Start 2P', cursive;
+font-family: 'Changa', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 18px;
@@ -119,7 +119,7 @@ border-radius: 39px;
     }
 
     .roadBox h1 {
-        font-family: 'Press Start 2P', cursive;
+        font-family: 'Changa', sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
