--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Changa:wght@400;500;600;700&family=Press+Start+2P&family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Changa:wght@400;500;600;700;800&family=Montserrat:wght@400;500;600;700&display=swap');
 
 html, body {
   margin: 0;
@@ -21,11 +21,6 @@ html, body {
   height: 100%;
 }
 
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
 
 @media (min-width: 320px) and (max-width: 480px) {
