--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -32,8 +32,8 @@ color: #003751;
 }
 
 .hero p {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 12px;
+    font-family: 'Changa', sans-serif;
+    font-size: 16px;
     line-height: 30px;
     padding-right: 120px;
     font-weight: 400;
@@ -73,6 +73,7 @@ color: #FFFFFF;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    flex-shrink: 0;
 }
 
 .flex2 {
