--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -28,7 +28,7 @@ padding: 0px 10px;
 }
 
 .heading {
-font-family: Montserrat;
+font-family:'Changa', sans-serif;
 font-style: normal;
 font-weight: 800;
 font-size: 24px;
@@ -41,7 +41,7 @@ color: #FFFFFF;
 }
 
 .body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Changa', sans-serif;
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
