--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -73,11 +73,11 @@ color: #FFFFFF;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    flex-shrink: 0;
 }
 
 .flex2 {
     margin-top: 90px;
+    margin-left: 50px;
     flex-grow: 1;
 }
 
