--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -77,7 +77,7 @@ color: #FFFFFF;
 
 .flex2 {
     margin-top: 90px;
-    margin-left: 50px;
+    margin-left: 70px;
     flex-grow: 1;
 }
 
@@ -104,6 +104,10 @@ color: #FFFFFF;
             flex-shrink: 1;
             margin-top: 30px;
             border: none;
+        }
+
+        .flex2 {
+            margin-left: 0px;
         }
 }
 
@@ -136,6 +140,7 @@ color: #FFFFFF;
 
     .flex2 {
         margin-top: 10px;
+        margin-left: 0px;
         flex-grow: 1;
     }
 
