--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -54,14 +54,15 @@ color: #FFFFFF;
 }
 
 .mint   {
-    width: 100%;
+    width: 85%;
     height: auto;
     background: #FFC160;
-    padding-bottom: 40px;
+    padding: 40px;
     display: flex;
     gap: 80px;
     flex-wrap: wrap;
     margin-top: 120px;
+    margin-left: 50px;
     justify-content: center;
 }
 
@@ -186,6 +187,19 @@ color: #003751;
         justify-items: center;
         place-content: center;
     }
+
+    .mint   {
+        width: 80%;
+        height: auto;
+        background: #FFC160;
+        padding: 20px;
+        display: flex;
+        gap: 0px;
+        flex-wrap: wrap;
+        margin-top: 120px;
+        margin-left: 40px;
+        justify-content: center;
+    }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -256,14 +270,14 @@ color: #003751;
     }
 
     .mint   {
-        width: 100%;
+        width: 75%;
         height: auto;
         background: #FFC160;
-        padding-bottom: 20px;
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
         margin-top: 120px;
+        margin-left: 7px;
         justify-content: center;
     }
 
@@ -303,7 +317,7 @@ color: #003751;
     align-items: center;
     justify-items: center;
     gap: 10px;
-    width: 90%;
+    width: 100%;
     height: auto;
     margin-top: 20px;
     background: #FFFFFF
